# apex_dma_kvm_pub

./: .gitignore  README.md  build.sh
Overlay/Overlay/x64/Debug/: Overlay.ilk  Stragulum.exe.recipe  Stragulum.ilk  Stragulum1.exe.recipe  vc143.idb
Overlay/Overlay/x64/Debug/Overlay.tlog/: CL.command.1.tlog  Overlay.lastbuildstate  clang-cl.command.1.tlog  clang-cl.write.1.tlog  link.read.1.tlog  lld-link.command.1.tlog  lld-link.read.1.tlog  lld-link.write.1.tlog
Overlay/Overlay/x64/Release/: Stragulum.exe.recipe  overlay_ap.iobj
Overlay/Overlay/x64/Release/Overlay.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Overlay.lastbuildstate  clang-cl.write.1.tlog  link.read.1.tlog  link.write.1.tlog
apex_dma/: Game.cpp  Game.h  Makefile  Math.cpp  Math.h  Pro.h  README.md  Readme.md  apex_dma.cpp  build.sh  index.html  memory.cpp  memory.h  offsets.h  prediction.h  vector.h
apex_dma/memflow_lib/: Cargo.toml
apex_dma/memflow_lib/memflow-ffi/: memflow.h
apex_dma/memflow_lib/memflow-ffi/examples/: Makefile  phys_mem.c
apex_dma/memflow_lib/memflow-ffi/examples/c/: find_process.c  module_list.c  process_list.c
apex_dma/memflow_lib/memflow-ffi/examples/cpp/: plist.cpp
apex_dma/memflow_lib/memflow-qemu-procfs/: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh
apex_dma/memflow_lib/memflow-qemu-procfs/examples/: read_phys.rs
apex_dma/memflow_lib/memflow-qemu-procfs/src/: lib.rs
apex_dma/memflow_lib/memflow-win32/: .gitignore  Cargo.toml  README.md  install.sh
apex_dma/memflow_lib/memflow-win32-ffi/examples/: process_list.c
apex_dma/memflow_lib/memflow-win32/.github/workflows/: binary-build.yml  build.yml
apex_dma/memflow_lib/memflow-win32/examples/: integration.rs  multithreading.rs
apex_dma/memflow_lib/memflow-win32/memflow-win32/: Cargo.toml  build.rs
apex_dma/memflow_lib/memflow-win32/memflow-win32-defs/: Cargo.toml
apex_dma/memflow_lib/memflow-win32/memflow-win32-defs/examples/: generate_offsets.rs
apex_dma/memflow_lib/memflow-win32/memflow-win32-defs/src/: kernel.rs  lib.rs
apex_dma/memflow_lib/memflow-win32/memflow-win32-defs/src/offsets/: builder.rs  mod.rs  offset_table.rs  pdb.rs  symstore.rs
apex_dma/memflow_lib/memflow-win32/memflow-win32-defs/src/offsets/pdb/: data.rs
apex_dma/memflow_lib/memflow-win32/memflow-win32/examples/: dump_offsets.rs  open_process.rs  process_list.rs
apex_dma/memflow_lib/memflow-win32/memflow-win32/offsets/: 10_0_18362_X64_0AFB69F5FD264D54673570E37B38A3181.toml  10_0_19041_X64_1C9875F76C8F0FBF3EB9A9D7C1C274061.toml  10_0_19041_X64_9C00B19DBDE003DBFE4AB4216993C8431.toml  10_0_19041_X64_BBED7C2955FBE4522AAA23F4B8677AD91.toml  10_0_19041_X86_1B1D6AA205E1C87DC63A314ACAA50B491.toml  10_0_19045_X64_5F0CF5D532F385333A9B4ABA25CA65961.toml  10_0_22000_X86_55678BC384F099B6ED05E9E39046924A1.toml  3_10_511_X86.toml  4_0_1381_X86.toml  5_2_3790_X64_82DCF67A38274C9CA99B60B421D2786D2.toml  6_1_7601_X64_ECE191A20CFF4465AE46DF96C22638451.toml  6_1_7601_X86_684DA42A30CC450F81C535B4D18944B12.toml
apex_dma/memflow_lib/memflow-win32/memflow-win32/src/: plugins.rs
apex_dma/memflow_lib/memflow-win32/memflow-win32/src/kernel/: mod.rs
apex_dma/memflow_lib/memflow-win32/memflow-win32/src/kernel/ntos/: x64.rs  x86.rs
apex_dma/memflow_lib/memflow-win32/memflow-win32/src/kernel/start_block/: aarch64.rs  x64.rs  x86pae.rs
apex_dma/memflow_lib/memflow-win32/memflow-win32/src/offsets/: mod.rs
apex_dma/memflow_lib/memflow-win32/memflow-win32/src/win32/: kernel.rs  kernel_builder.rs  kernel_info.rs  keyboard.rs  module.rs  process.rs  unicode_string.rs  vat.rs
apex_dma/memflow_lib/memflow-win32/memflow-win32/src/win32/kernel/: mem_map.rs
apex_guest/: apex_guest.sln
apex_guest/Client/: Client.sln
apex_guest/Client/Client/: Client.rc  Client.sln  Client.vcxproj  Client.vcxproj.filters  DirectX.cpp  DirectX.h  DirectXMath.h  RCa01724  XorString.h  imgui.ini  main.cpp  main.h  offsets.h  overlay.cpp  overlay.h  playerdef.h  resource.h  updater.hpp  utility.hpp  vector2.h
apex_guest/Client/Client/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_widgets.cpp
apex_guest/Client/Client/impl/hooking/: REMOVED.txt
apex_guest/Client/Client/impl/libraries/: shellcode.asm
apex_guest/Client/Client/impl/libraries/ImGui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_internal.h  imgui_xorstr.h
apex_guest/Client/Client/impl/libraries/lazyimporter/: lazyimporter.hpp
apex_guest/Client/Client/impl/libraries/xor/: xor.hpp
apex_guest/Client/Client/impl/render/: font.h  present.h
apex_guest/Client/Overlay/: Overlay.sln
apex_guest/Client/Overlay/Overlay/: Overlay.vcxproj
apex_guest/Client/Overlay/Overlay/x64/Debug/: Overlay.exe.recipe
apex_guest/Client/Overlay/Overlay/x64/Debug/Overlay.tlog/: CL.write.1.tlog  clang-cl.read.1.tlog  link.command.1.tlog  link.write.1.tlog
apex_guest/Client/Overlay/Overlay/x64/Release/: overlay_ap.exe.recipe  overlay_ap.ipdb
apex_guest/Client/Overlay/Overlay/x64/Release/Overlay.tlog/: clang-cl.command.1.tlog  link.command.1.tlog  lld-link.delete.1.tlog
apex_guest/Overlay/Overlay/: Overlay.vcxproj  Overlay.vcxproj.filters  main.cpp
apex_guest/include/: httplib.h
apex_guest/include/openssl/: bio.h  cmp.h  conf.h  configuration.h  core_names.h  opensslv.h  pkcs7.h  ssl.h  x509_vfy.h
apex_guest/lib/: libcrypto.def  libcrypto.lib  libssl.def  libssl.lib
vmread/: Doxyfile  LICENSE.md  Makefile  definitions.h  dograph.sh  inject  intmem.c  kmem.c  kmem.h  mem.c  mem.h  meson.build  perf_plot.p  pmparser.c  pmparser.h  processdata.h  vmmem.c  winstructs.h  wintools.c  wintools.h
vmread/hlapi/: hlapi.h  pointers.h  windll.cpp  winprocess.cpp  winprocesslist.cpp
