[package]
name = "memflow-qemu-procfs"
version = "0.1.5"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "qemu procfs connector for the memflow physical memory introspection framework"
documentation = "https://docs.rs/memflow-qemu-procfs"
readme = "README.md"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow-qemu-procfs"
license-file = "LICENSE"
keywords = [ "memflow", "introspection", "memory" ]
categories = [ "api-bindings", "memory-management", "os" ]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
memflow = { version = "0.1", features = ["inventory"] }
log = { version = "0.4", default-features = false }
procfs = "0.7"
libc = "0.2"

[dev-dependencies]
clap = "2.33"
simple_logger = "1.0"

[profile.release]
lto = true

[features]
default = []
inventory = []

[[example]]
name = "read_phys"
path = "examples/read_phys.rs"
