[package]
name = "memflow-win32-defs"
version = "0.2.0"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "static offset templates for "
documentation = "https://docs.rs/memflow-win32-defs"
readme = "../README.md"
homepage = "https://memflow.io"
repository = "https://github.com/memflow/memflow-win32"
license = "MIT"
keywords = [ "memflow", "introspection", "memory", "dma" ]
categories = [ "api-bindings", "memory-management", "os" ]

[dependencies]
memflow = { version = "0.2", default-features = false }
log = { version = "^0.4.14", default-features = false }
no-std-compat = { version = "^0.4.1", features = ["alloc"] }
serde = { version = "^1.0.133", default-features = false, optional = true, features = ["derive"] }

# symbolstore
dirs = { version = "^5.0.0", optional = true }
ureq = { version = "^2.4.0", optional = true }
pdb = { version = "^0.8.0", optional = true }
indicatif = { version = "^0.17.2", optional = true }
progress-streams = { version = "^1.1.0", optional = true }

[dev_dependencies]
simplelog = "^0.12.0"
clap = { version = "^4.0.26", features = ["cargo"] }
toml = "^0.8.8"

[features]
default = ["symstore", "download_progress"]
std = ["no-std-compat/std"]
symstore = ["dirs", "ureq", "pdb", "std"]
download_progress = ["indicatif", "progress-streams"]

[[example]]
name = "generate_offsets"
path = "examples/generate_offsets.rs"
required-features = ["symstore", "serde"]
